Fixed height of sections to get rid of weird scrolling on mobile

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -86,8 +86,7 @@ footer
       margin-right: 0
 
 section
-  height: 80vh
-  overflow: auto
+  min-height: 80vh
   display: flex
   align-items: center
   justify-content: center
